--- a/templates/index.html
+++ b/templates/index.html
@@ -51,11 +51,11 @@
 </head>
 <body>
 
-    <div class="top">weather</div>
+    <div class="top">{{data.weather}}</div>
 
     <div class="bottom">
-        <div class="bottom-left">count down</div>
-        <div class="bottom-right">tomato timer</div>
+        <div class="bottom-left">{{data.countdown}}</div>
+        <div class="bottom-right">{{data.timer}}</div>
     </div>
 
 </body>
