--- a/templates/index.html
+++ b/templates/index.html
@@ -17,8 +17,6 @@
             background-color: #f2f2f2;
             height: 40%;
             display: flex;
-            justify-content: center;
-            align-items: center;
             font-size: 24px;
         }
 
@@ -51,7 +49,22 @@
 </head>
 <body>
 
-    <div class="top">{{data.weather}}</div>
+<div class="top">
+    <div class="top-grid">
+        <div class="item">内容 1</div>
+        <div class="item">内容 2</div>
+        <div class="item">内容 3</div>
+        <div class="item">内容 4</div>
+        <div class="item">内容 5</div>
+
+        <div class="item">内容 6</div>
+        <div class="item">内容 7</div>
+        <div class="item">内容 8</div>
+        <div class="item">内容 9</div>
+        <div class="item">内容 10</div>
+    </div>
+</div>
+
 
     <div class="bottom">
         <div class="bottom-left">{{data.countdown}}</div>
