--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>daily-notice-broad</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <style>
         body {
             margin: 0;
@@ -12,13 +13,6 @@
             flex-direction: column;
         }
 
-        /* 上方区域 */
-        .top {
-            background-color: #f2f2f2;
-            height: 40%;
-            display: flex;
-            font-size: 24px;
-        }
 
         /* 下方整体容器 */
         .bottom {
@@ -50,20 +44,20 @@
 <body>
 
 <div class="top">
-    <div class="top-grid">
-        <div class="item">内容 1</div>
-        <div class="item">内容 2</div>
-        <div class="item">内容 3</div>
-        <div class="item">内容 4</div>
-        <div class="item">内容 5</div>
-
-        <div class="item">内容 6</div>
-        <div class="item">内容 7</div>
-        <div class="item">内容 8</div>
-        <div class="item">内容 9</div>
-        <div class="item">内容 10</div>
+    <div class="weather-grid">
+        <div>白天1</div>
+        <div>白天2</div>
+        <div>白天3</div>
+        <div>白天4</div>
+        <div>白天5</div>
+        <div>晚上1</div>
+        <div>晚上2</div>
+        <div>晚上3</div>
+        <div>晚上4</div>
+        <div>晚上5</div>
     </div>
 </div>
+
 
 
     <div class="bottom">
