--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,11 @@
 
 
     <div class="bottom">
-        <div class="bottom-left">{{data.countdown}}</div>
+        <div class="bottom-left" style="display: block;">
+            倒计时<br>
+            <span style="font-size: 40px; font-weight: bold;">1天</span><br>
+            去上课
+        </div>
         <div class="bottom-right">{{data.timer}}</div>
     </div>
 
