--- a/templates/index.html
+++ b/templates/index.html
@@ -68,14 +68,15 @@
 </div>
 
 
-    <div class="bottom">
-        <div class="bottom-left" style="display: block;">
-            倒计时<br>
-            <span style="font-size: 40px; font-weight: bold;">1天</span><br>
-            去上课
-        </div>
-        <div class="bottom-right">{{data.timer}}</div>
-    </div>
+
+
+<div class="bottom-left">
+    倒计时<br>
+    <span class="big-text">1天</span><br>
+    去上课
+</div>
+<div class="bottom-right">{{data.timer}}</div>
+</div>
 
 </body>
 </html>
