--- a/templates/index.html
+++ b/templates/index.html
@@ -72,7 +72,7 @@
 
 <div class="bottom-left">
     倒计时<br>
-    <span class="big-text">{{data.countdown}}天</span><br>
+    <span class="big-text">30天</span><br>
     去上课
 </div>
 <div class="bottom-right">{{data.timer}}</div>
