--- a/templates/index.html
+++ b/templates/index.html
@@ -5,41 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>daily-notice-broad</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <style>
-        body {
-            margin: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
+    <link rel="stylesheet" href="style.css">
 
-
-        /* 下方整体容器 */
-        .bottom {
-            flex: 1;
-            display: flex;
-        }
-
-        /* 下左区域 */
-        .bottom-left {
-            width: 50%;
-            background-color: #d9eaff;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-        }
-
-        /* 下右区域 */
-        .bottom-right {
-            width: 50%;
-            background-color: #ffe4d9;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 20px;
-        }
-    </style>
 </head>
 <body>
 
@@ -70,12 +37,20 @@
 
 
 
-<div class="bottom-left">
-    倒计时<br>
-    <span class="big-text">30天</span><br>
-    去上课
+
+<div class="bottom-container">
+    <div class="bottom-left">
+        <div>倒计时</div>
+        <div class="countdown-number">30天</div>
+        <div>去上课</div>
+    </div>
+
+    <div class="bottom-right">
+        tomato
+    </div>
 </div>
-<div class="bottom-right">{{data.timer}}</div>
+
+
 </div>
 
 </body>
