--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
 <div class="bottom-container">
     <div class="bottom-left">
         <div>倒计时</div>
-        <div class="countdown-number">30天</div>
+        <div class="countdown-number">{{data.countdown}}天</div>
         <div>去上课</div>
     </div>
 
