--- a/static/css/style.css
+++ b/static/css/style.css
@@ -32,12 +32,14 @@
 .bottom-container {
     position: fixed;
     left: 0;
-    bottom: 0;        /* ⭐ 关键：贴到底部 */
-    width: 100%;
-    height: 140px;    /* 你可以调整 */
+    bottom: 0;
 
-    display: flex;    /* ⭐ 关键：左右并排 */
+    width: 100%;
+    height: 60vh;   /* ⭐ 关键：占屏幕 60% */
+
+    display: flex;  /* ⭐ 左右并排 */
 }
+
 
 
 .bottom-left {
