--- a/templates/index.html
+++ b/templates/index.html
@@ -46,8 +46,12 @@
     </div>
 
     <div class="bottom-right">
-        tomato
+    <div class="timer">25:00</div>
+    <div class="road">
+        <img src="car.png" alt="car" class="car">
     </div>
+</div>
+
 </div>
 
 
