--- a/templates/index.html
+++ b/templates/index.html
@@ -46,10 +46,13 @@
     </div>
 
     <div class="bottom-right">
-    <div class="timer">25:00</div>
-    <div class="road">
-        <img src="car.png" alt="car" class="car">
-    </div>
+        <div class="timer">25:00</div>
+        <div class="road">
+            <img src="{{ url_for('static', filename='img/car.png') }}" class="car">
+        </div>
+
+</div>
+
 </div>
 
 </div>
