--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         {% for w in data.weather %}
             <div class="weather-grid div">
                 <div>{{ w.date }}</div>
-                <div>{{ w.day_weather[0] }}</div>
+                <img src="{{ url_for('static', filename='img/' + w.day_weather[2]) }}">
             </div>
         {% endfor %}
 
@@ -24,7 +24,7 @@
         {% for w in data.weather %}
             <div class="weather-grid div">
                 <div>{{ w.date }}</div>
-                <div>{{ w.night_weather[0] }}</div>
+                <img src="{{ url_for('static', filename='img/' + w.night_weather[2]) }}">
             </div>
         {% endfor %}
     </div>
