--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,57 +9,72 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
 
-<div class="top">
-    <div class="weather-grid">
-        {# 第一行：白天天气 #}
-        {% for w in data.weather %}
+    <div class="top">
+        <div class="weather-grid">
+            {# 第一行：白天天气 #}
+            {% for w in data.weather %}
             <div class="weather-grid div">
                 <div>{{ w.date }}</div>
                 <img src="{{ url_for('static', filename='img/' + w.day_weather[2]) }}">
             </div>
-        {% endfor %}
+            {% endfor %}
 
-        {# 第二行：夜间天气 #}
-        {% for w in data.weather %}
+            {# 第二行：夜间天气 #}
+            {% for w in data.weather %}
             <div class="weather-grid div">
                 <div>{{ w.date }}</div>
                 <img src="{{ url_for('static', filename='img/' + w.night_weather[2]) }}">
             </div>
-        {% endfor %}
-    </div>
-</div>
-
-
-    </div>
-</div>
-
-
-
-
-
-<div class="bottom-container">
-    <div class="bottom-left">
-        <div>倒计时</div>
-        <div class="countdown-number"><h1>{{data.countdown}}天</h1></div>
-        <div>去上课</div>
+            {% endfor %}
+        </div>
     </div>
 
-    <div class="bottom-right">
-        <div class="timer">25:00</div>
-        <div class="road">
-            <img src="{{ url_for('static', filename='img/car.png') }}" class="car">
+
+    </div>
+    </div>
+
+
+
+
+
+    <div class="bottom-container">
+        <div class="bottom-left">
+            <div>倒计时</div>
+            <div class="countdown-number">
+                <h1>{{data.datecountdown}}天</h1>
+            </div>
+            <div>去上课</div>
         </div>
 
-</div>
+        <div class="bottom-right">
+            <div class="timer">
+                <script src="{{ url_for('static', filename='timer.js') }}"></script>
+                <!DOCTYPE html>
 
-</div>
+                <h1>倒计时</h1>
+                <div id="timer"><h1>...<h1></div>
+                <input type="number" id="minutes" min="1" max="180">
+                <button onclick="setCountdown()">开始倒计时</button>
 
-</div>
+                <div id="msg" style="color:red;"></div>
+
+            </div>
+            <div class="road">
+                <img src="{{ url_for('static', filename='img/car.png') }}" class="car">
+            </div>
+
+        </div>
+
+    </div>
+
+    </div>
 
 
-</div>
+    </div>
 
 </body>
+
 </html>
