--- a/templates/index.html
+++ b/templates/index.html
@@ -44,22 +44,21 @@
         <div class="bottom-left">
             <div>倒计时</div>
             <div class="countdown-number">
-                <h1>{{data.datecountdown}}天</h1>
+                <h1>{{data.date}}天</h1>
             </div>
             <div>去上课</div>
         </div>
 
         <div class="bottom-right">
             <div class="timer">
-                <script src="{{ url_for('static', filename='timer.js') }}"></script>
-                <!DOCTYPE html>
-
+                
                 <h1>倒计时</h1>
                 <div id="timer"><h1>...<h1></div>
                 <input type="number" id="minutes" min="1" max="180">
                 <button onclick="setCountdown()">开始倒计时</button>
 
                 <div id="msg" style="color:red;"></div>
+                <script src="{{ url_for('static', filename='timer.js') }}"></script>
 
             </div>
             <div class="road">
