--- a/static/css/style.css
+++ b/static/css/style.css
@@ -68,16 +68,13 @@
     position: relative;
     width: 100%;
     height: 60px;
-    border-top: 2px solid #333; /* 一条直线 */
+    border-top: 2px solid #333;
 }
 
-
-/* 汽车 */
 .car {
     position: absolute;
-    top: 20px; /* 调整位置让它在直线上 */
+    top: 20px;
     left: 0;
-    width: 40px;
-    height: auto;
+    width: 80px;
     transition: transform 0.2s linear;
 }
