--- a/templates/index.html
+++ b/templates/index.html
@@ -42,11 +42,28 @@
 
     <div class="bottom-container">
         <div class="bottom-left">
-            <div>倒计时</div>
-            <div class="countdown-number">
-                <h1>{{data.date}}天</h1>
+            <div class="add-date">
+                <form action="/set_date" method="POST">
+                    <input type="text" name="event_name" placeholder="事件名称，例如：生日" required>
+                    <input type="date" name="target_date" required>
+                    <button type="submit">设置目标日期</button>
+                </form>
             </div>
-            <div>去上课</div>
+            {% if data.events %}
+            <div class="events-grid">
+                {% for e in data.events %}
+                <div class="event-card">
+                    <div class="event-name">{{ e.name }}</div>
+                    <div class="event-days">还有 {{ e.days }} 天</div>
+                </div>
+                {% endfor %}
+            </div>
+            {% else %}
+            <p>还没有添加任何事件</p>
+            {% endif %}
+
+
+
         </div>
 
         <div class="bottom-right">
@@ -60,7 +77,7 @@
                 <button onclick="setCountdown()">开始倒计时</button>
 
                 <div id="msg" style="color:red;"></div>
-                
+
 
             </div>
             <div class="road">
