--- a/templates/index.html
+++ b/templates/index.html
@@ -121,15 +121,15 @@
 
                 <div id="msg" style="color:red;"></div>
 
-
             </div>
+
+            
+
             <div class="road">
-                <img src="{{ url_for('static', filename='img/car.png') }}" class="car">
+                <img id="themeImage" src="{{ url_for('static', filename='img/blue car.png') }}" class="car">
             </div>
             <script src="{{ url_for('static', filename='js/timer.js') }}"></script>
-
-
-
+            
         </div>
 
     </div>
